# perito

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  PRD.md  README.md  ROADMAP_CODIFICACION.md  START-HERE.md  docker-compose.yml  env.example  no_leer.txt
.claude/: settings.json
.claude/agents/: code-reviewer.md  test-writer.md
.claude/hooks/: post-edit-lint.sh  protect-critical-paths.sh
.claude/rules/: clean-code-solid.md  coverage-determinism.md  fraud-suggests.md  hitl.md  pii-minimization.md  termination.md  testing.md
.claude/skills/check-hitl/: SKILL.md
.claude/skills/front-modernize/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.github/workflows/: claude-review.yml
aidlc-docs/: aidlc-state.md  aidlc-state.md.bak  audit.md
aidlc-docs/architecture/: adr-001-frontend-stack.md  architecture-ajit.md
aidlc-docs/construction/plans/: u1-fundaciones-contratos-functional-design-plan.md  u1-fundaciones-contratos-infrastructure-design-plan.md  u1-fundaciones-contratos-nfr-design-plan.md  u1-fundaciones-contratos-nfr-requirements-plan.md  u2-extraccion-verificacion-grounding-functional-design-plan.md  u2-extraccion-verificacion-grounding-nfr-requirements-plan.md  u3-functional-design-plan.md  u3-nfr-requirements-plan-answered.md  u4-orchestration-hitl-termination-nfr-requirements-plan.md
aidlc-docs/construction/u1-fundaciones-contratos/: venv-authorization.md
aidlc-docs/inception/application-design/: component-dependency.md  components.md  services.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  story-generation-plan.md  unit-of-work-plan.md  user-stories-assessment.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md
backend/: U2-CODE-SUMMARY.md  demo_mail.py  demo_run.py  pyproject.toml  showcase.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: evidence_correlator.py
backend/app/api/: cartas.py  hitl_actions.py  ingest.py
backend/app/contracts/: __init__.py  adjunto.py  caso.py  correlacion.py  dataset.py  dictamen.py  enums.py  extraccion.py  money.py  pii.py  poliza.py  verificacion.py
backend/app/dashboard/: __init__.py  branding.py  c11.py  comparativa.py  copiloto.py  demo_assets.py  documentos.py  evidencia.py  productividad.py  store.py  vista_caso.py
backend/app/dashboard/static/: style.css
backend/app/dashboard/templates/: _macros.html  _productividad.html  bandeja.html  base.html  detalle.html  nuevo.html  panel.html  workbench.html  workbench_actividad.html  workbench_carta.html  workbench_caso.html  workbench_chat.html  workbench_comparativa.html  workbench_documento.html  workbench_evidencia.html
backend/app/demo/: __init__.py  scenarios.py  seed.py
backend/app/fraud/: __init__.py  cross_claim.py  fraude.py  historia.py
backend/app/hitl/: __init__.py  c8.py
backend/app/intake/: __init__.py  c1.py  document_ai.py  entidades.py  mailbox.py  multimodal.py  poller.py  triage.py
backend/app/llm/: __init__.py  extractor.py  summary.py  verifier.py
backend/app/observability/: __init__.py  langfuse_sink.py  replay.py  tracer.py
backend/app/orchestrator/: __init__.py  c7.py
backend/app/persistence/: db.py
backend/app/policy/: README.md  lookup.py
backend/app/rag/: __init__.py  schema.py
backend/app/rules/: __init__.py  motor_r1_r5.py  precondiciones.py
backend/app/security/: __init__.py  redaction.py
backend/app/synthetic/: __init__.py  adapters.py  generator.py
backend/demo_assets/: README.md
backend/tests/: __init__.py  conftest.py  fixtures_u3_motor.py  generators.py  imap_mock.py  test_contracts_invariants.py  test_contracts_roundtrip.py  test_demo_cierre.py  test_evolution_agent_board.py  test_evolution_carta.py  test_evolution_demo_live.py  test_evolution_front_ingest.py  test_evolution_frontend_hifi.py  test_evolution_langfuse.py  test_evolution_postgres.py  test_fase2_correccion_inline.py  test_firma_sesion.py  test_generator_failclosed.py  test_m1_document_ai.py  test_m2_extraccion_rica.py  test_m3_evidence_correlator.py  test_redaction_denybydefault.py  test_u10_wiring_cross_claim.py  test_u2_c2_c4_integration.py  test_u2_extractor_mapping.py  test_u2_policy_lookup.py  test_u2_redaction.py  test_u2_verifier_signal.py  test_u3_dictamen_rule_ctr_03.py  test_u3_fraude_determinismo.py  test_u3_motor_r1_r5_pbt.py  test_u3_motor_r1_r5_units.py  test_u3_product_aware.py  test_u4_c1_intake.py  test_u4_c7_orchestrator.py  test_u4_c8_hitl.py  test_u4_multimodal.py  test_u5_c11_dashboard.py  test_u5_c9_observability.py  test_u5_historia.py  (+28 more)
backend/tests/evals/: __init__.py  claude_judge.py  conftest.py  test_agentic_evals.py  test_evals_per_stratum.py
docs/: DEMO.md  c4-arquitectura.html  capstone-perito.md  critica.md  icp.md  mercado.md  overview.md  pvb.md  stack.md
research/: validacion.md
scratchpad/pitch/: .gitignore  Perito-pitch.pptx  build.js  gen-assets.js  gen-bg.js  package-lock.json  package.json
scripts/: semantic-review.sh
specs/: prd.md
specs/aidlc/: METODOLOGIA.md  README.md  audit.md  execution-plan.md  requirements.md
specs/aidlc/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md
specs/aidlc/architecture/: adr-002-monolito-modular.md  adr-003-observabilidad.md
specs/aidlc/evolution/: ROADMAP-fnol-completo.md  ROADMAP-workbench.md  agent-native-board.md  bandeja-hifi-alignment.md  carta-autogenerada.md  deepeval-tool-correctness.md  demo-cierre-live.md  demo-live-gmail.md  estados-coherencia-fraude.md  extractor-evidence-span.md  firma-unica-sesion.md  front-demo.md  frontend-hifi-redesign.md  full-demo-showcase.md  gov-rules-p5-p6.md  hitl-corregir.md  langfuse-observability.md  m1-adjuntos-pipeline.md  m2-extraccion-rica.md  m3-evidence-correlator.md  panel-metrics.md  postgres-persistence.md  summary-agent-robusto.md  u1-clasificacion-prioridad-routing.md  u10-wiring-cross-claim.md  u2-documentos-checklist.md  u3-cobertura-product-aware.md  u4-intake-multimodal.md  u5-historia-cross-claim.md  u6-fraude-cross-claim.md  (+28 more)
(+49 files in other folders)
