[project]
name = "perito-backend"
version = "0.1.0"
description = "Perito — copiloto agéntico de admisión FNOL (backend). U1: Fundaciones & Contratos."
requires-python = ">=3.12"

# Dependencias — confirmadas en Inception (RES-04) / tech-stack-decisions de U1.
# pydantic-settings, python-multipart y anthropic ya se importaban en runtime; se declaran aquí para que
# un `make setup` limpio levante la app sin ModuleNotFoundError (antes venían solo por instalación previa).
dependencies = [
    "pydantic>=2.7",        # contratos tipados strict (H-17, RNF-13)
    "pydantic-settings>=2.4", # config por entorno (app/config.py) — BaseSettings salió del core en pydantic v2
    "faker>=25.0",          # generador sintético es_CO (H-16) — SOLO en synthetic/, nunca en tests Hypothesis
    "psycopg[binary]>=3.1", # driver PostgreSQL
    "sqlalchemy>=2.0",      # Core: engine + tablas para persistencia (C1); antes transitivo vía pgvector
    "pgvector>=0.2",        # adaptador cliente de la extensión pgvector (RAG, M10)
    "fastapi>=0.110",       # scaffold API (superficie real en U4)
    "python-multipart>=0.0.9", # FastAPI lo exige para parsear Form(...) — acciones HITL + corrección inline
    "itsdangerous>=2.0",    # firma la cookie de sesión (SessionMiddleware) — identidad de estación (firma P1)
    "uvicorn>=0.29",        # server de dev
    "anthropic>=0.40",      # SDK Claude para los agentes reales de extracción/verificación (app/llm/)
    # langfuse: opcional (extra "obs" abajo) — solo se requiere si se configuran las keys de Langfuse (B1).
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",          # tests deterministas (rules/testing.md)
    "hypothesis>=6.100",    # property-based testing (PBT-09, RNF-27)
]
obs = [
    "langfuse>=4.13",       # observabilidad real (B1, Must #10); opcional — solo si se activan las keys
]
evals = [
    "deepeval>=4.0",        # evals agénticos con Claude-as-judge (D, RF-27); solo para `pytest -m agentic`
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Los evals agénticos (pipeline real + juez Claude) son caros y no deterministas → EXCLUIDOS por
# default. Correrlos a demanda con: pytest -m agentic  (requiere ANTHROPIC_API_KEY real + deepeval).
markers = [
    "agentic: eval agéntico con pipeline real + Claude-as-judge (caro, no-determinista, fuera del CI)",
]
addopts = "-m 'not agentic'"

[tool.hypothesis]
# Reproducibilidad: seed logueado en fallo (PBT-08 / RNF-26).
# El perfil de CI se ajusta en U5 (Build & Test).
